[package]
name = "mcpixel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
color_space = "0.5.3"
derive_builder = "0.12.0"
image = "0.24.6"
include_dir = "0.7.3"
rayon = "1.7.0"
strum = { version = "0.25.0", features = ["derive"] }

[build-dependencies]
avgcol = "0.2.0"
convert_case = "0.6.0"
